# FluidSim

./: CMakeLists.txt  grid.txt
Shaders/: fragmentShader.frag
inc/: glad.h  grid.h  particle.h  particle_c.h  shader_c.h  utils.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: Particle.cpp  Particle.h  glUtils.cpp  glUtils.h  gl_utils.cpp  glad.c  main.cpp  particle.cpp  utils.cpp
